# kaleido

./: Cargo.toml  README.md
src/: README.md  debug_pattern.frag  hello_vr_triangle.rs  kabstract.rs  kaleido.rs  kconstants.rs  kstructs.rs  kvulkan.rs  lib.rs  main.rs  newfrag.spv  newvert.spv  quantikka.rs  vulkan.rs
